--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -17,3 +17,7 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+.input-error {
+    border: 1px solid red !important;
+}
