--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -21,3 +21,7 @@ body {
 .input-error {
     border: 1px solid red !important;
 }
+
+.input-error-bottom {
+    border-bottom: 1px solid red !important;
+}
