styles: update ui
- Made side bar have a min width instead of fixed width
- Added custom styles for in-page scrollbar on overflow
- Enforced margin right on home page in medium screens and above

--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -25,3 +25,8 @@ body {
 .input-error-bottom {
     border-bottom: 1px solid red !important;
 }
+
+.scrollbar {
+  scrollbar-color: grey rgb(40, 40, 40);
+  scrollbar-width: thin;
+}
